feat: animacao hover no usuarios lista da secao dos bolsistas

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
             <div class="titulos_containers">
                 <p class="section-badge">Iniciativa que conecta pessoas, ideias e futuro</p>
-                <h2>Conheça as histórias por trás do nosso projeto:</h2>
+                <h2>Conheça as histórias por trás do nosso projeto</h2>
                 <div class="tech-line"></div>
             </div>
 
@@ -81,7 +81,7 @@
                             <span class="artigo-relacionado-tag">Projeto</span>
                             <h3 class="artigo-relacionado-subtitulo">O projeto que brilhou</h3>
                             <div class="artigo-relacionado-info">
-                            <span>24/10/2025</span>
+                            <span>15/11/2025</span>
                             <span><i class="bi bi-stopwatch"></i> 3 minutos de leitura</span>
                             </div>
                         </div>
@@ -100,7 +100,7 @@
                             <span class="artigo-relacionado-tag">Parceria</span>
                             <h3 class="artigo-relacionado-subtitulo">ETEPAC e COMPAZ: uma união estratégica e eficaz</h3>
                             <div class="artigo-relacionado-info">
-                            <span>24/10/2025</span>
+                            <span>15/11/2025</span>
                             <span><i class="bi bi-stopwatch"></i> 2 minutos de leitura</span>
                             </div>
                         </div>
@@ -119,7 +119,7 @@
                             <span class="artigo-relacionado-tag">Bolsistas</span>
                             <h3 class="artigo-relacionado-subtitulo">Impacto e inovação: a força interdisciplinar dos bolsistas</h3>
                             <div class="artigo-relacionado-info">
-                            <span>24/10/2025</span>
+                            <span>15/11/2025</span>
                             <span><i class="bi bi-stopwatch"></i> 2 minutos de leitura</span>
                             </div>
                         </div>
@@ -169,7 +169,7 @@
                             </li>
                         </ul>
                     </div>
-                    
+
                 </div>
                 <div class="right-box">
                     <h1>Conteúdos gerados</h1>
@@ -330,15 +330,40 @@
                 <div class="blocos-usuarios-container">
 
                     <div class="usuarios-lista">
-                        <img src="utils/img/rostos/valmir.jpg" alt="">
-                        <img src="utils/img/rostos/andry.jpg" alt="">
-                        <img src="utils/img/rostos/carl.jpg" alt="">
-                        <img src="utils/img/rostos/jaquy.jpg" alt="">
-                        <img src="utils/img/rostos/glebson.jpg" alt="">
-                        <img src="utils/img/rostos/rayane.jpg" alt="">
-                        <img src="utils/img/rostos/julio.jpg" alt="">
-                        <img src="utils/img/rostos/ruth.jpg" alt="">
-                        <img src="utils/img/rostos/leo.jpg" alt="">
+                        <a href="pages/artigo_perfis.html#valmir" title="Valmir Pereira">
+                            <img src="utils/img/rostos/valmir.jpg" alt="">
+                        </a>
+
+                        <a href="pages/artigo_perfis.html#andry" title="Andryene Rodrigues">
+                            <img src="utils/img/rostos/andry.jpg" alt="">
+                        </a>
+
+                        <a href="pages/artigo_perfis.html#carl" title="Carlos Henrique">
+                            <img src="utils/img/rostos/carl.jpg" alt="">
+                        </a>
+
+                        <a href="pages/artigo_perfis.html#jaquy" title="Jaquelyne Alves">
+                            <img src="utils/img/rostos/jaquy.jpg" alt="">
+                        </a>
+                        <a href="pages/artigo_perfis.html#glebson" title="Glébson Silva">
+                            <img src="utils/img/rostos/glebson.jpg" alt="">
+                        </a>
+
+                        <a href="pages/artigo_perfis.html#rayane" title="Rayane Gomes">
+                            <img src="utils/img/rostos/rayane.jpg" alt="">
+                        </a>
+
+                        <a href="pages/artigo_perfis.html#julio" title="Júlio Rasec">
+                            <img src="utils/img/rostos/julio.jpg" alt="">
+                        </a>
+
+                        <a href="pages/artigo_perfis.html#ruth" title="Ruth Pereira">
+                            <img src="utils/img/rostos/ruth.jpg" alt="">
+                        </a>
+
+                        <a href="pages/artigo_perfis.html#leo" title="Leonardo Felipe">
+                            <img src="utils/img/rostos/leo.jpg" alt="">
+                        </a>
 
                         <div class="botao-mais"><i class="bi bi-mortarboard-fill"></i></div>
                     </div>
