fix: resolvi problema no auto scroll da page dos perfis

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-        <!-- cabeçalho com logo e menu de navegação -->
+    <!-- cabeçalho com logo e menu de navegação -->
     <header class="header" id="header">
         <div class="box-header">
 
@@ -27,7 +27,6 @@
                         <li><a href="#bolsistas">BOLSISTAS</a></li>
                         <li><a href="#depoimentos">DEPOIMENTOS</a></li>
                         <li><a href="#apoio">APOIADORES</a></li>
-                        <li><a href="#footer">CONTATOS</a></li>
                     </ul>
                 </nav>
 
@@ -46,8 +45,8 @@
                     <li><a class="item-mobile" href="#projeto">PROJETO</a></li>
                     <li><a class="item-mobile" href="#professores">PROFESSORES</a></li>
                     <li><a class="item-mobile" href="#bolsistas">BOLSISTAS</a></li>
+                    <li><a class="item-mobile" href="#depoimentos">DEPOIMENTOS</a></li>
                     <li><a class="item-mobile" href="#apoio">APOIADORES</a></li>
-                    <li><a class="item-mobile" href="#footer">CONTATOS</a></li>
                 </ul>
             </div>
         </div>
@@ -381,7 +380,7 @@
         <section id="depoimentos" class="containers testimonials-tech">
             <div class="titulos_containers">
                 <p class="section-badge">Feedbacks reais</p>
-                <h2>O que <span>quem viveu</span> o projeto tem a dizer</h2>
+                <h2>O que quem viveu o projeto tem a dizer</h2>
                 <div class="tech-line"></div>
             </div>
 
@@ -449,7 +448,6 @@
                 </a>
             </div>
         </section>
-
     </main>
 
     <footer class="footer" id="footer">
