--- a/pages/artigo_perfis.html
+++ b/pages/artigo_perfis.html
@@ -9,7 +9,7 @@
 <body>
     <canvas id="tech-bg"></canvas>
 
-    <header>
+    <header id="header-perfis">
         <a href="../index.html#bolsistas" class="button-voltar" aria-label="Voltar para a seção Bolsistas na página inicial"><i class="bi bi-caret-left-fill" aria-hidden="true"></i> <p>voltar</p></a>
         <img src="../utils/img/logos/logo_site_branca.png" alt="Logo Inclusão Digital">
     </header>
@@ -117,6 +117,8 @@
 
         </div>
     </main>
+
+    <script src="../utils/js/perfis.js"></script>
 
     <script src="../utils/js/animated.js"></script>    
     
