refactor: ajuste do background da secao dos depoimentos

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 
         </section>
 
-        <section id="depoimentos" class="containers testimonials-tech">
+        <section id="depoimentos" class="testimonials-tech">
             <div class="titulos_containers">
                 <p class="section-badge">Feedbacks reais</p>
                 <h2>O que quem viveu o projeto tem a dizer</h2>
