small wording and comma corrections

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
             <div class="tech-grid">
 
                 <div class="tech-card">
-                    <i class="tech-text"> “Apesar do período curto do projeto, consegui aprender bastante sobre tecnologia, especialmente na aula de IOT e IA que eram assuntos que eu não tinha tanto conhecimento, e aqui pude aprender bastante.” </i>
+                    <i class="tech-text"> “Apesar do período curto do projeto, eu consegui aprender bastante sobre tecnologia, especialmente na aula de IoT e IA, que eram assuntos que eu não tinha tanto conhecimento e aqui pude aprender bastante.” </i>
                         
                     <div class="tech-profile">
                         <span>Aluna do projeto, Evellyn Rodrigues</span>
@@ -421,7 +421,7 @@
                 </div>
 
                 <div class="tech-card">
-                    <i class="tech-text"> “Acho muito importante trazer esse projeto de inclusão digital, pois a nossa comunidade que é público da nossa biblioteca, realmente precisa desse acesso. E acredito que todos saíram muito felizes tornando a biblioteca mais viva.” </i>
+                    <i class="tech-text"> “Acho muito importante trazer esse projeto de inclusão digital, pois a nossa comunidade, que é o público da nossa biblioteca, realmente precisa desse acesso. E acredito que todos saíram muito felizes, tornando a biblioteca mais viva.” </i>
 
                     <div class="tech-profile">
                         <span>Bibliotecária do COMPAZ, Ana Cristina Castro</span>
@@ -432,7 +432,7 @@
                 </div>      
 
                 <div class="tech-card">
-                    <i class="tech-text"> “Para o aprendizado não existe idade, gostei muito de participar do projeto, e achei muito necessário esse acesso a tecnologia que é algo crucial nos dias de hoje, é a dinâmica do futuro!” </i>
+                    <i class="tech-text"> “Para o aprendizado não existe idade, né?! Eu gostei muito de participar do projeto e achei muito necessário esse acesso a tecnologia, que é algo crucial nos dias de hoje. É a dinâmica do futuro!” </i>
                         
                     <div class="tech-profile">
                         <span>Aluna do projeto, Maria Candida</span>
